# cataglyphis3-software

./: README.md
cataglyphis_gui/: CMakeLists.txt  package.xml
cataglyphis_gui/qt_project_src/build-cataglyphis_gui-Desktop_Qt_5_5_1_GCC_64bit-Debug/: Makefile  cataglyphis_gui  moc_cataglyphis_gui.cpp  moc_cataglyphis_startup_form_main.cpp  moc_init_step_one.cpp  moc_ros_workers.cpp  ui_cataglyphis_gui.h  ui_cataglyphis_startup_form_main.h  ui_map_viewer.h
cataglyphis_gui/src/: cataglyphis_gui_node.cpp  test_node.cpp
hsm/: CMakeLists.txt  README.md  package.xml
hsm/launch/: HSM_TEST_node_1.launch
hsm/msg/: HSM_Detection.msg  HSM_Detection.msg.bak  MasterStatus.msg  UserInputInitStartup.msg  UserInputLostLocation.msg  UserInputLostNextState.msg  UserInputLostNorth.msg  UserInputLostSampleProps.msg  UserInputLostWaypointIndex.msg  UserInputReboot.msg
hsm/src/: Comm_Monitor_class.cpp  Counter.cpp  Escape_Monitor_class.cpp  HSM_Detector.cpp  HSM_Executive_node.cpp  HSM_HB_Executive_node.cpp  HSM_Heartbeat.cpp  HSM_Heartbeat_Monitor_class.cpp  HSM_Master_Executive_node.cpp  HSM_NB1_Detector.cpp  HSM_NB1_Executive_node.cpp  HSM_NB1_Monitor_class.cpp  HSM_TEST_node_1.cpp  HSM_TEST_node_2.cpp  TEST_DRIVER_Counter.cpp  TEST_DRIVER_HSM_Detector.cpp  TEST_DRIVER_Timer.cpp  Timer.cpp  info_node.cpp  robot_pose_monitor.cpp  user_input_exec_act_class.cpp  user_input_mp_act_class.cpp  user_input_nav_act_class.cpp  user_input_node.cpp  voice.cpp  voice_node.cpp
hw_interface/: CMakeLists.txt  package.xml
hw_interface/launch/: NB1_Serial.launch  NB1_Serial_pathfinder.launch  NB1_UDP_Receiver.launch  NB1_UDP_Sender.launch  NB1_UDP_Sender_Fault_Test.launch  NB2_UDP_Receiver.launch  NB3_UDP_Receiver.launch  Pathfinder_NB2_Serial.launch  back_roboteq.launch  back_roboteq_pathfinder.launch  front_roboteq.launch  front_roboteq_pathfinder.launch  homing_test.launch  hw_interface.launch  hw_interface_plugins.launch  middle_roboteq.launch
hw_interface/src/: Comm_class.cpp  RoboteqDevice.cpp  Serial_HSM_Act_class.cpp  Serial_Port_class.cpp  UDP_HSM_Act_class.cpp  UDP_Receiver_Port_class.cpp  UDP_Sender_Port_class.cpp  UDP_Sender_Port_class_fault_test.cpp  base_UDP_interface.cpp  base_interface.cpp  base_serial_interface.cpp  communications_node.cpp  drive_packet.cpp  grabber_node.cpp  grabber_packet.cpp  hw_interface.cpp  hw_interface_node.cpp  i7_to_nb1_packet.cpp  nb1_to_i7_packet.cpp  nb1_to_i7_serial_packet.cpp  nb2_3_to_i7_packet.cpp  roboteq_class.cpp  speed_node.cpp
lidar/: CMakeLists.txt  package.xml
lidar/msg/: CollisionOut.msg
lidar/src/: collision_detection.cpp  collision_detection_node.cpp  collision_detection_node_updated.cpp  homing_function.cpp  lidar_filtering.cpp  lidar_filtering1.cpp  lidar_filtering_node.cpp  lidar_filtering_node_updated.cpp  old_velodyne_filtering_node.cpp  velodyne_filtering_node.cpp  velodyne_filtering_node_2.cpp
linux_files/: .gitignore  (+8 more)
messages/: CMakeLists.txt  package.xml
messages/msg/: ActuatorOut.msg  CVSampleProps.msg  CVSamplesFound.msg  CollisionOut.msg  DriveabilityHazards.msg  ExecAction.msg  ExecActionEnded.msg  ExecDequeEmpty.msg  ExecGrabberStatus.msg  ExecInfo.msg  ExecStateMachineInfo.msg  GrabberFeedback.msg  Keyframe.msg  KeyframeList.msg  LidarFilterOut.msg  LocalMap.msg  MasterStatus.msg  MissionPlanningInfo.msg  NavFilterOut.msg  NextWaypointOut.msg  ROIMapInfo.msg  RobotPose.msg  SLAMPoseOut.msg  Servo_command.msg  Servo_status.msg  SimControl.msg  SimInfo.msg  SimSampleLocations.msg  VoiceSayPhrase.msg  ZedCollisionOut.msg  encoder_data.msg  i7_to_nb1_msg.msg  nb1_to_i7_msg.msg  nb1_to_i7_serial_msg.msg  nb2_3_to_i7_msg.msg
messages/srv/: CVSearchCmd.srv  CVSetSampleParams.srv  CreateROIHazardMap.srv  CreateROIKeyframe.srv  EmergencyEscapeTrigger.srv  ExecAction.srv  ExecManualOverride.srv  GlobalMapFull.srv  GlobalMapPathHazards.srv  HSMSetNorthAngle.srv  MapPathHazards.srv  MapSegment.srv  MissionPlanningControl.srv  NavFilterControl.srv  ROIGridMap.srv  SearchLocalMapInfo.srv  SetStartingPlatform.srv
robot_control/: CMakeLists.txt  package.xml
robot_control/config/: map_manager_demo.yaml  map_manager_demo.yaml.old  map_manager_global_map.yaml  map_manager_search_local_map.yaml  safe_pathing_maps.yaml
robot_control/launch/: Keyboard_Control.launch  Mission_Planning.launch  map_manager_global_map_viz.launch  map_manager_search_local_map_viz.launch  map_manager_viz.launch  safe_pathing_map_viz.launch
robot_control/msg/: CurrentROI.msg  DriveSpeeds.msg  Keys_Pressed.msg  ROI.msg  ROIList.msg  Waypoint.msg
robot_control/rviz/: map_manager_demo.rviz  map_manager_demo_v2.rviz  map_manager_demo_v3.rviz  map_manager_demo_v4.rviz  map_manager_demo_v5.rviz  map_manager_demo_v6.rviz  safe_pathing_demo.rviz
robot_control/src/: action.cpp  approach.cpp  avoid.cpp  bias_removal.cpp  cataglyphis_timer.cpp  choose_region.cpp  collect.cpp  confirm_collect.cpp  deposit_approach.cpp  deposit_sample.cpp  donut_map_manager.cpp  drive_global.cpp  drive_halt.cpp  drive_pivot.cpp  drive_relative.cpp  drive_straight.cpp  drive_straight_cl.cpp  drop.cpp  emergency_escape.cpp  examine.cpp  exec.cpp  exec_node.cpp  exec_state_machine.cpp  go_home.cpp  grab.cpp  grabber_halt.cpp  grabber_idle.cpp  grabber_set_drop.cpp  grabber_set_slides.cpp  halt.cpp  idle.cpp  initialize.cpp  keyboard_control_node.cpp  map_manager.cpp  map_manager_node.cpp  mission_planning.cpp  mission_planning.cpp.autosave  mission_planning_node.cpp  next_best_region.cpp  open.cpp  (+12 more)
robot_control/srv/: IntermediateWaypoints.srv  ModifyROI.srv  RandomSearchWaypoints.srv  RegionsOfInterest.srv  SearchMap.srv  WaypointsOfInterest.srv
simulation/: CMakeLists.txt  package.xml
simulation/src/: RobotSim.cpp  sim_manager_node.cpp  simulation_node.cpp
slam/: CMakeLists.txt  package.xml
slam/include/: map_layers.h
slam/libpointmatcher_ros/: CMakeLists.txt
slam/msg/: TkeyTomap_msg.msg
slam/slam/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
slam/slam_backup/: package.xml
slam/src/: keyframe.cpp  keyframe_sub.cpp  localization.cpp  test_node.cpp
(+460 files in other folders)
